--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,46 @@
-spring.application.name=EventHotelTracker
-server.port=8080
+# =========================================================
+# APPLICATION IDENTIFICATION
+# =========================================================
+spring.application.name=hotel-surge-analyzer
+spring.main.banner-mode=off
+spring.main.log-startup-info=false
 
+# Disable web server completely (CRITICAL for MCP stdio)
+spring.main.web-application-type=none
 
-anthropic.api.key={{Anthropic}}
-anthropic.api.url=https://api.anthropic.com/v1/messages
+# =========================================================
+# MCP SERVER CONFIGURATION
+# =========================================================
+spring.ai.mcp.server.name=hotel-surge-analyzer
+spring.ai.mcp.server.version=1.0.0
+spring.ai.mcp.server.transport=stdio
 
-ticketmaster.api.key={{TicketMaster}}
-ticketmaster.api.url=https://app.ticketmaster.com/discovery/v2/events.json
-
+# =========================================================
+# PERFORMANCE / JSON LIMITS
+# =========================================================
+# Allow large external API responses (Ticketmaster, hotel APIs, etc.)
 spring.codec.max-in-memory-size=10MB
 
+# =========================================================
+# LOGGING (STDERR ONLY ? DO NOT LOG TO STDOUT)
+# =========================================================
+# Keep levels minimal (actual routing handled by logback-spring.xml)
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.org.springframework.web=WARN
+logging.level.org.springframework.ai.mcp=DEBUG
 
-# Thymeleaf
-spring.thymeleaf.cache=false
+# Prevent noisy auto-config logs
+logging.level.org.springframework.boot.autoconfigure=ERROR
+logging.level.reactor.netty=ERROR
+
+# =========================================================
+# SAFETY: ENSURE NOTHING BINDS TO A PORT
+# =========================================================
+server.port=0
+
+
+# --- EXTERNAL API CONFIGURATION ---
+holiday.api.base-url=https://date.nager.at/api/v3
+ticketmaster.api.key=${TICKETMASTER_API_KEY}
+ticketmaster.api.url=https://app.ticketmaster.com/discovery/v2/events.json
